# boat-hull-optimizer

./: AngleConstraints.h  Bbox.h  Bezier_cubic.cpp  Bezier_cubic.h  Bezier_quad_unit.cpp  Bezier_quadratic.cpp  Bezier_quadratic.h  CMakeLists.txt  Constraints.h  GAOptimizer.h  GeneticOptimizer.h  GreedyOptimizer.cpp  GreedyOptimizer.h  HelperFunctions.h  HillClimber.h  Hull.cpp  Hull.h  HullModel.cpp  HullModel.h  HullParameters.h  Main.cpp  Makefile  MemoizedStationCalculator.h  MonteCarloOptimizer.h  Optimizable.h  OptimizableHull.cpp  OptimizableHull.h  OptimizableHullFactory.cpp  OptimizableHullFactory.h  OptimizableModel.cpp  OptimizableModel.h  Optimizer.h  Point_3.h  SharedStationProperties.h  Station.cpp  Station.h  StationParameters.h  WaterlineCurve.h  WaterlineCurveCubic.h  main.cpp  (+2 more)
Concepts/: Optimizable_concept.h
data/: example-dat.txt
gnuplot_example/: station_visualization.gp
hull_plotter/hull_plotter/: Hull_qt.h  Point_3_qt.h  Station_qt.h  counter.cpp  counter.h  hull_plotter.pro  hulldatareader.cpp  hulldatareader.h  hullplotter.cpp  hullplotter.h  (+3 more)
original_code/: RandomizedStation.h  old_midsection_code.cpp  results.ods
profiling_data/: profiling_results.ods
src_new/: FlyweightStation.cpp  FlyweightStation.h  HelperFunctions.h  HillClimber.h  HullConstraints.h  HullModel.cpp  HullModel.h  HullModel.tpp  HullParameters.h  MemoizedStationCalculator.h  OptimizableModel.cpp  OptimizableModel.h  OptimizableModel.tpp  SharedStationProperties.h  StationBuilder.cpp  StationBuilder.h  StationCalculator.cpp  StationCalculator.h  StationProperties.h
